--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,6 @@ dependencies = [
     "numpy>=2.3.0",
     "pandas>=2.3.0",
     "pydantic>=2.11.5",
+    "scikit-learn>=1.7.0",
     "seaborn>=0.13.2",
 ]
